--- a/build-and-deploy/Vagrantfile
+++ b/build-and-deploy/Vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/trusty64"
 
   # provision
-  config.vm.provision :shell, path: "vagrant_bootstrap.sh", privileged: false
+  config.vm.provision :shell, path: "bootstrap.sh", privileged: false
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
