--- a/build-and-deploy/static_nginx.conf
+++ b/build-and-deploy/static_nginx.conf
@@ -29,3 +29,11 @@ server {
 		root /home/vagrant/static-deployment/iwc;
 	}
 }
+
+server {
+	listen 9004;
+	server_name localhost 127.0.0.1;
+	location / {
+		root /home/vagrant/static-deployment/dataUtility;
+	}
+}
