--- a/build-and-deploy/Vagrantfile
+++ b/build-and-deploy/Vagrantfile
@@ -64,6 +64,10 @@ Vagrant.configure(2) do |config|
   #   # Use VBoxManage to customize the VM. For example to change memory:
   #   vb.customize ["modifyvm", :id, "--memory", "1024"]
     vb.customize ["modifyvm", :id, "--memory", "2048"]
+
+    # enable this if network connection is super slow
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
   end
   #
   # View the documentation for the provider you're using for more
