--- a/build-and-deploy/Vagrantfile
+++ b/build-and-deploy/Vagrantfile
@@ -33,6 +33,8 @@ Vagrant.configure(2) do |config|
   config.vm.network "forwarded_port", guest: 9002, host: 8002
   config.vm.network "forwarded_port", guest: 9001, host: 8001
   config.vm.network "forwarded_port", guest: 9000, host: 8000
+  config.vm.network "forwarded_port", guest: 9200, host: 8200
+  config.vm.network "forwarded_port", guest: 9201, host: 8201
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
