--- a/build-and-deploy/Vagrantfile
+++ b/build-and-deploy/Vagrantfile
@@ -35,6 +35,7 @@ Vagrant.configure(2) do |config|
   config.vm.network "forwarded_port", guest: 9000, host: 8000
   config.vm.network "forwarded_port", guest: 9200, host: 8200
   config.vm.network "forwarded_port", guest: 9201, host: 8201
+  config.vm.network "forwarded_port", guest: 7799, host: 7799
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
