--- a/build-and-deploy/Vagrantfile
+++ b/build-and-deploy/Vagrantfile
@@ -56,6 +56,9 @@ Vagrant.configure(2) do |config|
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
 
+  # TODO: CUSTOM FOR EACH USER
+  config.vm.synced_folder "~/ozp/", "/home/vagrant/ozp", type: "rsync"
+
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
