--- a/build-and-deploy/configs/nginx/static_nginx.conf
+++ b/build-and-deploy/configs/nginx/static_nginx.conf
@@ -14,43 +14,55 @@ server {
 	}
 
 	location /center {
-		proxy_redirect off;
     	proxy_pass http://localhost:9093;
     	proxy_set_header Host $host:$server_port;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # need this - not sure why $host doesn't work
+        proxy_redirect http://localhost:9093/ https://localhost:7799/;
 	}
 
 	location /hud {
-		proxy_redirect off;
     	proxy_pass http://localhost:9093;
     	proxy_set_header Host $host:$server_port;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # need this - not sure why $host doesn't work
+        proxy_redirect http://localhost:9093/ https://localhost:7799/;
 	}
 
 	location /webtop {
-		proxy_redirect off;
     	proxy_pass http://localhost:9093;
     	proxy_set_header Host $host:$server_port;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # need this - not sure why $host doesn't work
+        proxy_redirect http://localhost:9093/ https://localhost:7799/;
 	}
 
 	location /iwc {
-		proxy_redirect off;
     	proxy_pass http://localhost:9093;
     	proxy_set_header Host $host:$server_port;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # need this - not sure why $host doesn't work
+        proxy_redirect http://localhost:9093/ https://localhost:7799/;
 	}
 
 	location /demo_apps {
-		proxy_redirect off;
     	proxy_pass http://localhost:9093;
     	proxy_set_header Host $host:$server_port;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # need this - not sure why $host doesn't work
+        proxy_redirect http://localhost:9093/ https://localhost:7799/;
 	}
 
+}
+
+server {
+    listen 9093;
+    location / {
+        root /home/vagrant/static-deployment;
+    }
 }
