--- a/build-and-deploy/configs/nginx/static_nginx.conf
+++ b/build-and-deploy/configs/nginx/static_nginx.conf
@@ -63,6 +63,6 @@ server {
 server {
     listen 9093;
     location / {
-        root /home/vagrant/static-deployment;
+        root /ozp-static-deployment;
     }
 }
