--- a/vagrant/centos6.6/build-and-deploy-box/configs/static_nginx.conf
+++ b/vagrant/centos6.6/build-and-deploy-box/configs/static_nginx.conf
@@ -1,5 +1,7 @@
 
 server {
+    # CHANGE ME to IP address of host box
+    set $host_ip localhost;
 	listen 7799 ssl;
 	server_name localhost 127.0.0.1;
 	ssl_certificate /etc/nginx/ssl/server.crt;
@@ -19,7 +21,7 @@ server {
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # need this - not sure why $host doesn't work
-        proxy_redirect http://localhost:9093/ https://localhost:7799/;
+        proxy_redirect http://$host_ip:9093/ https://$host_ip:7799/;
 	}
 
 	location /hud {
@@ -28,7 +30,7 @@ server {
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # need this - not sure why $host doesn't work
-        proxy_redirect http://localhost:9093/ https://localhost:7799/;
+        proxy_redirect http://$host_ip:9093/ https://$host_ip:7799/;
 	}
 
 	location /webtop {
@@ -37,7 +39,7 @@ server {
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # need this - not sure why $host doesn't work
-        proxy_redirect http://localhost:9093/ https://localhost:7799/;
+        proxy_redirect http://$host_ip:9093/ https://$host_ip:7799/;
 	}
 
 	location /iwc {
@@ -46,7 +48,7 @@ server {
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # need this - not sure why $host doesn't work
-        proxy_redirect http://localhost:9093/ https://localhost:7799/;
+        proxy_redirect http://$host_ip:9093/ https://$host_ip:7799/;
 	}
 
 	location /demo_apps {
@@ -55,7 +57,7 @@ server {
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # need this - not sure why $host doesn't work
-        proxy_redirect http://localhost:9093/ https://localhost:7799/;
+        proxy_redirect http://$host_ip:9093/ https://$host_ip:7799/;
 	}
 
 }
