--- a/vagrant/centos6.6/build-and-deploy-box/configs/static_nginx.conf
+++ b/vagrant/centos6.6/build-and-deploy-box/configs/static_nginx.conf
@@ -1,7 +1,10 @@
 
 server {
-    # CHANGE ME to IP address of host box
-    set $host_ip localhost;
+    # Ideally we could use a variable here, but custom variables don't seem
+    # to work in nginx conf files:
+    # http://stackoverflow.com/questions/15416957/using-variables-in-nginx-location-rules
+    # So instead, we'll just sed this file to replace $host_ip with the
+    # actual IP address
 	listen 7799 ssl;
 	server_name localhost 127.0.0.1;
 	ssl_certificate /etc/nginx/ssl/server.crt;
