--- a/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
+++ b/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
@@ -12,6 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "chef/centos-6.6"
+  config.vm.define "ozp-centos6.6"
 
   # provision
   config.vm.provision :shell, path: "bootstrap.sh", privileged: false
@@ -57,9 +58,10 @@ Vagrant.configure(2) do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
+  #   # Name the box something useful.
+      vb.name = "ozp-centos6.6"
   #   # Don't boot with headless mode
   #   vb.gui = true
-  #
   #   # Use VBoxManage to customize the VM. For example to change memory:
   #   vb.customize ["modifyvm", :id, "--memory", "1024"]
     vb.customize ["modifyvm", :id, "--memory", "2048"]
