--- a/vagrant/ubuntu14.4/build-and-deploy-box/Vagrantfile
+++ b/vagrant/ubuntu14.4/build-and-deploy-box/Vagrantfile
@@ -12,6 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "ubuntu/trusty64"
+  config.vm.define "ozp-ubuntu14.4"
 
   # provision
   config.vm.provision :shell, path: "bootstrap.sh", privileged: false
@@ -64,6 +65,8 @@ Vagrant.configure(2) do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
+  #   # Name the box something useful.
+      vb.name = "ozp-ubuntu14.4"
   #   # Don't boot with headless mode
   #   vb.gui = true
   #
