--- a/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
+++ b/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
@@ -29,6 +29,7 @@ Vagrant.configure(2) do |config|
   config.vm.network "forwarded_port", guest: 8080, host: 5808
   config.vm.network "forwarded_port", guest: 8443, host: 5443
   config.vm.network "forwarded_port", guest: 7799, host: 7799
+  config.vm.network "forwarded_port", guest: 8449, host: 8449
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
