--- a/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
+++ b/vagrant/centos6.6/build-and-deploy-box/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure(2) do |config|
   # vagrantup.com
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "chef/centos-6.6"
+  config.vm.box = "bento/centos-6.7"
   config.vm.define "ozp-centos6.6"
 
   # provision
