--- a/vagrant/new-backend/configs/ozp_nginx.conf
+++ b/vagrant/new-backend/configs/ozp_nginx.conf
@@ -46,15 +46,15 @@ server {
         # same file in the following order: the primary certificate comes first,
         # then the intermediate certificates. A secret key in the PEM format may
         # be placed in the same file
-        ssl_certificate      /ozp/certs/server.crt;
+        ssl_certificate      /ozp/server_certs/server.crt;
 
         # Specifies a file with the secret key in the PEM format for the given
         # virtual server
-        ssl_certificate_key  /ozp/certs/server.key;
+        ssl_certificate_key  /ozp/server_certs/private/server.key;
 
         # Specifies a file with trusted CA certificates in the PEM format used
         # to verify client certificates
-        ssl_client_certificate      /ozp/certs/ca.crt;
+        ssl_client_certificate      /ozp/ca_certs/rootCA.pem;
 
         # Change to 'required' if only SSL Client authenticated
         # request should be passed to Django
