--- a/vagrant/new-backend/configs/ozp_nginx.conf
+++ b/vagrant/new-backend/configs/ozp_nginx.conf
@@ -2,7 +2,7 @@
 
 server {
         server_name localhost;
-        listen 443;
+        listen 443 ssl;
 
         location = /favicon.ico { access_log off; log_not_found off; }
 
@@ -23,6 +23,18 @@ server {
         }
         location /demo_apps {
             alias /ozp/static-deployment/demo_apps;
+        }
+
+        location /demoauth {
+            proxy_pass http://localhost:8081/;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Scheme $scheme;
+            # SSL settings for django-ssl-client-auth
+            proxy_set_header X-SSL-User-DN $ssl_client_s_dn;
+            proxy_set_header X-SSL-Authenticated $ssl_client_verify;
         }
 
         location / {
