--- a/vagrant/new-backend/configs/ozp_nginx.conf
+++ b/vagrant/new-backend/configs/ozp_nginx.conf
@@ -25,18 +25,6 @@ server {
             alias /ozp/static-deployment/demo_apps;
         }
 
-        location /demoauth {
-            proxy_pass http://localhost:8081/;
-            proxy_set_header Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Scheme $scheme;
-            # SSL settings for django-ssl-client-auth
-            proxy_set_header X-SSL-User-DN $ssl_client_s_dn;
-            proxy_set_header X-SSL-Authenticated $ssl_client_verify;
-        }
-
         location / {
             proxy_pass http://localhost:8080/;
             proxy_set_header Host $http_host;
@@ -46,6 +34,7 @@ server {
             proxy_set_header X-Scheme $scheme;
             # SSL settings for django-ssl-client-auth
             proxy_set_header X-SSL-User-DN $ssl_client_s_dn;
+            proxy_set_header X-SSL-Issuer-DN $ssl_client_i_dn;
             proxy_set_header X-SSL-Authenticated $ssl_client_verify;
         }
 
@@ -103,6 +92,7 @@ server {
             proxy_set_header X-Scheme $scheme;
             # SSL settings for django-ssl-client-auth
             proxy_set_header X-SSL-User-DN $ssl_client_s_dn;
+            proxy_set_header X-SSL-Issuer-DN $ssl_client_i_dn;
             proxy_set_header X-SSL-Authenticated $ssl_client_verify;
         }
 
