--- a/vagrant/new-backend/configs/ozp_nginx.conf
+++ b/vagrant/new-backend/configs/ozp_nginx.conf
@@ -9,20 +9,23 @@ server {
         location /static/ {
             alias /ozp/static-deployment/django_static/;
         }
-        location /center {
-            alias /ozp/static-deployment/center;
+        location /center/ {
+            alias /ozp/static-deployment/center/;
         }
-        location /hud {
-            alias /ozp/static-deployment/hud;
+        location /hud/ {
+            alias /ozp/static-deployment/hud/;
         }
-        location /webtop {
-            alias /ozp/static-deployment/webtop;
+        location /webtop/ {
+            alias /ozp/static-deployment/webtop/;
         }
-        location /iwc {
-            alias /ozp/static-deployment/iwc;
+        location /iwc/ {
+            alias /ozp/static-deployment/iwc/;
         }
-        location /demo_apps {
-            alias /ozp/static-deployment/demo_apps;
+        location /demo_apps/ {
+            alias /ozp/static-deployment/demo_apps/;
+        }
+        location /help/ {
+            alias /ozp/static-deployment/help/;
         }
 
         location / {
