--- a/vagrant/new-backend/Vagrantfile
+++ b/vagrant/new-backend/Vagrantfile
@@ -28,6 +28,7 @@ Vagrant.configure(2) do |config|
   # accessing "localhost:8080" will access port 80 on the guest machine.
   config.vm.network "forwarded_port", guest: 443, host: 8443
   config.vm.network "forwarded_port", guest: 4430, host: 9443
+  config.vm.network "forwarded_port", guest: 4440, host: 9444
   config.vm.network "forwarded_port", guest: 5432, host: 15432
 
   # Create a private network, which allows host-only access to the machine
