--- a/vagrant/new-backend/configs/ozp_nginx.conf
+++ b/vagrant/new-backend/configs/ozp_nginx.conf
@@ -29,6 +29,9 @@ server {
         }
 
         location / {
+            # enabling this broke production for Swagger and any requests
+            # with responses larger than ~48k
+            proxy_buffering off;
             proxy_pass http://localhost:8080/;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -74,6 +77,7 @@ server {
         ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers   on;
         ssl_session_cache shared:SSL:10m;
+        ssl_verify_depth 2;
     }
 
 server {
@@ -132,6 +136,7 @@ server {
         ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers   on;
         ssl_session_cache shared:SSL:10m;
+        ssl_verify_depth 2;
     }
 
 server {
@@ -188,4 +193,5 @@ server {
         ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers   on;
         ssl_session_cache shared:SSL:10m;
+        ssl_verify_depth 2;
     }
