--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
 script:
  - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
  - pycodestyle ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402,E722 --show-source
- - DEV_MODE=True python manage.py test
+ - DEV_MODE=True pytest
