--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 appdirs==1.4.3
 autopep8==1.3.2
+backports-abc==0.5
 boto3==1.4.7
 botocore==1.7.19
 certifi==2017.7.27.1
 chardet==3.0.4
+click==6.7
 coreapi==2.3.1
 coreschema==0.0.4
 coverage==4.4.1
@@ -23,14 +25,17 @@ drf-nested-routers==0.90.0
 elasticsearch==5.4.0
 factory-boy==2.9.2
 Faker==0.8.4
+flamegraph==0.1
 gunicorn==19.7.1
 idna==2.6
 itypes==1.1.0
 Jinja2==2.9.6
 jmespath==0.9.3
+livereload==2.5.1
 Markdown==2.6.9
 MarkupSafe==1.0
 mccabe==0.6.1
+mkdocs==0.16.3
 mockredispy==2.9.3
 msgpack-python==0.4.8
 nose==1.3.7
@@ -40,9 +45,13 @@ packaging==16.8
 pep8==1.7.0
 Pillow==4.2.1
 psycopg2==2.7.3.1
+py==1.4.34
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pyparsing==2.2.0
+pytest==3.2.3
+pytest-cov==2.5.1
+pytest-django==3.1.2
 python-dateutil==2.6.1
 pytz==2017.2
 PyYAML==3.12
@@ -51,6 +60,6 @@ requests==2.18.4
 s3transfer==0.1.11
 simplejson==3.11.1
 six==1.11.0
+tornado==4.5.2
 uritemplate==3.0.0
 urllib3==1.22
-mkdocs==0.16.3
