--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ install:
 before_script:
  - mkdir -p media
  - mkdir -p static
- - DEV_MODE=True python manage.py migrate --noinput
+ - TEST_MODE=True python manage.py migrate --noinput
  - python manage.py collectstatic --noinput
 
 script:
  - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
  - pycodestyle ozp ozpcenter ozpiwc plugins tests --ignore=E501,E123,E128,E121,E124,E711,E402,E722 --show-source
  - echo "Number of cores `nproc`"
- - DEV_MODE=True pytest -n `nproc` --dist=loadscope $TEST_FOLDER
+ - TEST_MODE=True pytest -n `nproc` --dist=loadscope $TEST_FOLDER
