--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,20 @@ env:
   global:
     - ES_VERSION=2.4.6 ES_DOWNLOAD_URL=https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/$ES_VERSION/elasticsearch-$ES_VERSION.tar.gz
   matrix:
-    - TEST_FOLDER="tests/ozp tests/ozpcenter"
-    - TEST_FOLDER="tests/ozpcenter_api"
-    - TEST_FOLDER="tests/ozpcenter_model_access"
-    - TEST_FOLDER="plugins tests/plugins/ tests/ozpiwc"
+    - DB=sqlite TEST_FOLDER="tests/ozp tests/ozpcenter"
+    - DB=sqlite TEST_FOLDER="tests/ozpcenter_api"
+    - DB=sqlite TEST_FOLDER="tests/ozpcenter_model_access"
+    - DB=sqlite TEST_FOLDER="plugins tests/plugins/ tests/ozpiwc"
+    - DB=psql TEST_FOLDER="tests/ozp tests/ozpcenter"
+    - DB=psql TEST_FOLDER="tests/ozpcenter_api"
+    - DB=psql TEST_FOLDER="tests/ozpcenter_model_access"
+    - DB=psql TEST_FOLDER="plugins tests/plugins/ tests/ozpiwc"
 
 services:
   - redis-server
+
+addons:
+  postgresql: "9.4"
 
 language: python
 
@@ -16,7 +23,7 @@ language: python
 
 python:
   - "3.4"
-  - "3.6"
+#  - "3.6"
 
 # command to install dependencies
 install:
@@ -29,11 +36,16 @@ install:
 before_script:
  - mkdir -p media
  - mkdir -p static
- - TEST_MODE=True python manage.py migrate --noinput
  - python manage.py collectstatic --noinput
+ - psql -c "CREATE USER ozp_user WITH PASSWORD 'password';" -U postgres
+ - psql -c 'ALTER USER ozp_user CREATEDB;' -U postgres
+ - psql -c 'CREATE DATABASE ozp;' -U postgres
+ - psql -c 'GRANT ALL PRIVILEGES ON DATABASE ozp TO ozp_user;' -U postgres
+ - MAIN_DATABASE=$DB TEST_MODE=True python manage.py migrate --noinput
 
 script:
  - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
  - pycodestyle ozp ozpcenter ozpiwc plugins tests --ignore=E501,E123,E128,E121,E124,E711,E402,E722 --show-source
  - echo "Number of cores `nproc`"
- - TEST_MODE=True pytest -n `nproc` --dist=loadscope $TEST_FOLDER
+ - echo "Database used $DB"
+ - MAIN_DATABASE=$DB TEST_MODE=True pytest -n `nproc` --dist=loadscope $TEST_FOLDER
