test(subscription): increase code coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,4 +2,6 @@
 omit =
     ozpcenter/migrations/*
     ozpcenter/scripts/*
-    ozpiwc/tst_iwc_compatible_server.py 
+    ozpiwc/tst_iwc_compatible_server.py
+    ozp/roles_draft.py
+    ozp/wsgi.py
