--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ env
 *.log
 gunicorn.pid
 
+dump.rdb 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
