feat(jwt): add jwt token

--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -22,5 +22,9 @@ gunicorn==19.7.1
 PyYAML==3.12
 msgpack-python==0.4.8
 
+# celery
 celery==4.1.0
 amqp==2.2.2
+
+# JWT
+djangorestframework-jwt==1.11.0
