--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .cache/
 
+*.pid
+
 db.sqlite3
 *.sublime*
 __pycache__
@@ -22,7 +24,7 @@ env
 *.log
 gunicorn.pid
 
-dump.rdb 
+dump.rdb
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
