--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ env
 git-working
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839git 
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839git
 
 workspace
 distribution
@@ -29,6 +29,7 @@ certs/*.pem
 certs/*.csr
 certs/*.txt
 certs/*.p12
+certs/*.srl
 
 # User-specific stuff:
 .idea/workspace.xml
