refactor(certs): change to use vars for filename

--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,13 @@ git-working
 workspace
 distribution
 
-certs/*.crt
-certs/*.key
-certs/*.pem
-certs/*.csr
-certs/*.txt
-certs/*.p12
-certs/*.srl
+certs/**/*.crt
+certs/**/*.key
+certs/**/*.pem
+certs/**/*.csr
+certs/**/*.txt
+certs/**/*.p12
+certs/**/*.srl
 
 # User-specific stuff:
 .idea/workspace.xml
