doc(certs): updated docs

--- a/certs/nginx/nginx.conf
+++ b/certs/nginx/nginx.conf
@@ -29,6 +29,17 @@ http {
 
     gzip  on;
 
+    server {
+        listen       8085; # http2 default_server;
+        server_name  localhost;
+        server_tokens off;
+
+        location ^~ /certs {
+          alias /home/mrivera/certs/;
+          autoindex on;
+        }
+
+    }
     # HTTPS server
     # https://geekflare.com/nginx-webserver-security-hardening-guide/
     # https://www.ghacks.net/2016/04/18/manage-cipher-suites-firefox/
@@ -63,20 +74,21 @@ http {
         location = /favicon.ico { access_log off; log_not_found off; }
 
         # enforce trailing slash on urls
-        location ~ ^/(?<page>static|center|hud|webtop|help|iwc|demo_apps|ws)$ {
+        location ~ ^/(?<page>static|center|hud|webtop|help|iwc|demo_apps|ws|frontend)$ {
           return 301 $scheme://$http_host/$page/;
         }
 
-        # (cd ~/git/ozp-center/ && API_URL=https://localhost:4443 npm start)
+        # AML 2.0 Frontend
         location /center {
           proxy_pass http://localhost:8000/dist/;
         }
 
-        location ^~ /certs {
-          alias /home/mrivera/certs/;
-          autoindex on;
+        # AML 3.0 Frontend
+        location ^~/frontend {
+          proxy_pass http://localhost:8080/;
         }
 
+        # AML 2.0/3.0 Backend
         location / {
             # enabling this broke production for Swagger and any requests
             # with responses larger than ~48k
@@ -128,7 +140,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
-
         }
 
         error_page   500 502 503 504  /50x.html;
