doc(certs): updated docs

--- a/certs/nginx/nginx.conf
+++ b/certs/nginx/nginx.conf
@@ -85,7 +85,7 @@ http {
 
         # AML 3.0 Frontend
         location ^~/frontend {
-          proxy_pass http://localhost:8080/;
+          proxy_pass http://172.16.98.81:8080/;
         }
 
         # AML 2.0/3.0 Backend
