test(bookmarks): fix broken unit tests

--- a/ozpcenter/scripts/test_data/listings.yaml
+++ b/ozpcenter/scripts/test_data/listings.yaml
@@ -77,7 +77,7 @@
   - {count: 9, profile: syme}
   - {count: 10, profile: obrien}
 - library_entries:
-  - {folder: old, owner: wsmith, position: 0, share_permission: VIEWER, share_with: bigbrother2}
+  - {folder: old, owner: wsmith, position: 0}
   - {folder: null, owner: hodor, position: 0}
   library_sharing: []
   listing:
