--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ env
 *.log
 gunicorn.pid
 
+db.sqlite3-journal
+
 dump.rdb
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
