--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-    -  ES_VERSION=6.3.2 https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$ES_VERSION.tar.gz
+    -  ES_VERSION=6.3.2 ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$ES_VERSION.tar.gz
   matrix:
     - DB=sqlite TEST_FOLDER="tests/ozp tests/ozpcenter"
     - DB=sqlite TEST_FOLDER="tests/ozpcenter_api"
